Version 0.10.9 (legolas558)
* added WoaS logo to left of title
* border widths will now display properly in Chrome and other browsers
* "<" and ">" are now forbidden in titles
* added title attributes to editor buttons (by littelgirl, suggested by ChrisClemson)

Version 0.10.8 (legolas558) released 2010-03-11
* faster AES encryption/decryption (thanks to dixon)
* various user interface improvements and bugfixes
* fixed load/save bugs with IE
* fixed a bug which prevented WoaS from correctly remembering about last encrypted page
* incremented infinite recursion limit to 256
* XHTML comments and CSS style blocks are now pre-parsed
* URLs will not get italics
* fixed ghost page bug when creating new page and then canceling it
* fixed misleading wait cursor when javascript is disabled
* improved error messages when no file is selected but attempted to import
* added better explanation for java load/save failures
* proper page title validation & page title maximum length check
* added a notice in decryption password mask
* added help icon, implemented help popups and added documentation pages in WoaS::Help:: namespace
* added button for wiki links in editor mode
* added new menu/submenu edit button (based on work by littlegirl)

Version 0.10.7 (legolas558) released 2010-03-06
* added 'mime' parameter to woas.load_file() function
* correct implementation of blob import (was broken)
* added exclusive check for WSIF 1.0.0 files
* fixed WSIF import bug from older WSIF versions
* changed WoaS::Bootscript from embedded to plain text
* fixed a couple of navigation bugs (reported by deroock)
* fixed bug with non-overwritten pages being reported as not imported
* implementation of javascript security settings upon import
* implementation of macro pluggable syntax (based on FBNil's work)
* fixed many old syntax parsing bugs

Version 0.10.6 (legolas558) released 2010-03-02
* fixed XHTML tags corruption issue (reported by littlegirl)

Version 0.10.5 (legolas558) released 2010-03-01