@@ -1,9 +1,4 @@
 
-// native WSIF-saving mode used during development - use with CARE!
-// to switch from native WSIF to normal javascript mode, open loadsave.js
-// and comment the branches "if (this._auto_native_wsif)"
-woas["_auto_native_wsif"] = true;
-
 // a class for some general WSIF operations
 woas["wsif" ] = {	version: "1.2.0", DEFAULT_INDEX: "index.wsif",
 					emsg: null, imported_page: false,
